@@ -2,18 +2,18 @@ Persistent Memory Development Kit
 
 This is utils/docker/README.
 
-Scripts in this directory let Travis or Github Actions CIs run a Docker container
+Scripts in this directory let Github Actions CIs run a Docker container
 with ubuntu- or fedora-based environment and build PMDK project inside it.
 
 'build-local.sh' can be used to build PMDK locally.
 
-'build-CI.sh' is used for building PMDK on Travis and GitHub Actions CIs
+'build-CI.sh' is used for building PMDK on GitHub Actions CIs
 
 NOTE:
 If you commit changes to any Dockerfile or shell script in the 'images'
 subdirectory and then do git-rebase before pushing your commits to the
 repository, make sure that you do not squash the commit which is the head in
-your repository. This will let Travis and GitHub Actions CIs recreate
+your repository. This will let GitHub Actions CIs recreate
 Docker images used during the build before the build. Otherwise the not-updated
 Docker image will be pulled from $DOCKER_REPO and used during
-the build on Travis and GitHub Actions CIs.
+the build on GitHub Actions CIs.
